<resources>
    <string name="app_name">草根直播</string>

    <!--底栏名称-->
    <string name="announcement">公告</string>
    <string name="list">列表</string>
    <string name="live">直播</string>
    <string name="photo">写真</string>
    <string name="my">我的</string>

    <!--列表页顶栏名称-->
    <string name="focus">关注</string>
    <string name="hot">热门</string>
    <string name="recent">最新</string>

    <!--公告页名称-->
    <string name="angel_reward_plan">天使奖励计划</string>
    <string name="live_convention">直播公约</string>
    <string name="official_notification">官方通知</string>

    <!--要进行直播时，如果未认证的提示语句-->
    <string name="info_user_to_authentication">为保证平台的安全性和主播的真实性，开启直播需要进行实名认证</string>

    <!--公告界面最上方的提示文字，在后台可以修改-->
    <string name="announcement_top_notice_title">关于提现的通知：</string>
    <string name="announcement_top_notice_content">此处显示直播公约，允许管理员在后台修改，用户只能观看，不能对内容进行操作</string>

    <!--天使奖励计划细则-->
    <string name="angel_reward_content">天使奖励计划分为6级，观众消费达100元时为等级一，等级一用户继续消费3000元时为等级二，等级二继续消费6000升级为等级三，等级三继续消费9000升级为等级四，等级四继续消费12000升级为等级五，等级五继续消费15000升级为等级六。观众每达到一个等级并手动开启天使奖励后，会获得一个序号，当系统总序号到达此序号×4+1时，系统将发放奖励给该观众，同时该观众序号变为原序号×4+2，新序号继续参加活动。每一等级奖励独立，互不影响，永无止境！\n\n等级对应奖励（可叠加领取）：\n1.等级一奖励50元；\n2.等级二奖励1800元；\n3.等级三奖励4200元；\n4.等级四奖励7200元；\n5.等级五奖励10800元；\n6.等级六奖励15000元；</string>

    <!--赞助榜和收入榜-->
    <string name="support_rank_list">赞助傍</string>
    <string name="income_rank_list">收入榜</string>
    <string name="day_rank_list">日榜</string>
    <string name="week_rank_list">周榜</string>
    <string name="month_rank_list">月榜</string>
    <string name="all_rank_list">总榜</string>

    <!--收入记录相关-->
    <string name="today_income">今日收入</string>
    <string name="yesterday_income">昨日收入</string>
    <string name="buy_seed">培育种子</string>
    <string name="withdraw_cash">提现</string>

    <!--买种子相关-->
    <string name="seed">种子</string>
    <string name="seed_num_46">x46</string>
    <string name="seed_num_470">x470</string>
    <string name="seed_num_945">x945</string>
    <string name="seed_num_1900">x1900</string>
    <string name="seed_num_4770">x4770</string>
    <string name="seed_num_9600">x9600</string>

    <string name="seed_rmb_5">￥5</string>
    <string name="seed_rmb_50">￥50</string>
    <string name="seed_rmb_100">￥100</string>
    <string name="seed_rmb_200">￥200</string>
    <string name="seed_rmb_500">￥500</string>
    <string name="seed_rmb_1000">￥1000</string>


</resources>
