<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.ylsna.activity.IncomeRankListActivity">
    <!--titlebar-->
    <RelativeLayout
        android:id="@+id/rl_income_rank_list_title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_save_user_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/income_rank_list"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imb_income_rank_list_toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:background="@mipmap/nav_icon_return_default" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_income_rank_list"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/rl_income_rank_list_title_bar"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="4">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@drawable/radio_button_rank_selector"
            android:gravity="center"
            android:text="@string/day_rank_list"
            android:textColor="@color/colorTextPrimary" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@drawable/radio_button_rank_selector"
            android:gravity="center"
            android:text="@string/week_rank_list"
            android:textColor="@color/colorTextPrimary" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@drawable/radio_button_rank_selector"
            android:gravity="center"
            android:text="@string/month_rank_list"
            android:textColor="@color/colorTextPrimary" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@drawable/radio_button_rank_selector"
            android:gravity="center"
            android:text="@string/all_rank_list"
            android:textColor="@color/colorTextPrimary" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_income_rank_list"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rg_income_rank_list"
        android:background="@color/colorLine"
        android:orientation="horizontal" />

    <ListView
        android:id="@+id/lv_support_rank_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_income_rank_list"
        android:background="@android:color/white"
        tools:listheader="@layout/header_lv_support_rank_list" />
</RelativeLayout>
